# gtnh-toolkit

./: .gitignore  README.md  args.py  config_reader.py  configreader.py  grapher.py  hello.py  main.py  models.py  mypy.ini  notes.md  pyproject.toml  solver.py
gamelogic/: BasicMachine.py  BasicMachine.test.py  BasicMachine_test.py  Electricity.py  Electricity_test.py  GameTime.py  game_time.py  items.py
gamelogic/Machines/: Base.py  PerfectOverclockMachine.py  StandardOverclockMachine.py  __init__.py
gamelogic/machines/: __init__.py  base.py  industrial_centrifuge.py  perfect_overclock_machine.py
machines/: BasicMachine.py
