[project]
name = "gtnh-toolkit"
version = "0.1.0"
description = "Tools for your GTNH adventure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "mypy>=1.14.1",
    "pydantic>=2.10.6",
    "pyomo>=6.8.2",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "ruff>=0.9.2",
    "types-pyyaml>=6.0.12.20241230",
]

[tool.poe.tasks]
test = "pytest"
run = "./main.py"

[dependency-groups]
dev = []
